Add Google Fonts for improved typography; update styles across components for consistency and responsiveness

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       content="Plan your perfect trip with AI. Chat with our intelligent travel planner, create personalized itineraries, and book the best hotels at the lowest prices."
     />
     <title>StayNow - AI-Powered Travel Planning & Hotel Booking</title>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800&display=swap" rel="stylesheet">
   </head>
   <body class="bg-neutral-50 text-neutral-900 antialiased">
     <div id="root"></div>
